Update links to external resources in index.html

--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                             <span class="tag">Cryptography</span>
                             <span class="tag">Algorithms</span>
                         </div>
-                        <a href="#" class="btn-outline" style="padding: 10px 20px; font-size: 0.9rem;"><i class="fab fa-github"></i> View Case Study</a>
+                        <a href="https://github.com/0AhmedYasser0/Crypto-program-.git" class="btn-outline" style="padding: 10px 20px; font-size: 0.9rem;"><i class="fab fa-github"></i> View Case Study</a>
                     </div>
                 </div>
             </div>
@@ -477,7 +477,7 @@
                     <div class="cert-info">
                         <h3>Certified Network Security Practitioner (CNSP)</h3>
                         <p>The SecOps Group | Issued Nov 2025</p>
-                        <a href="#" target="_blank" class="cert-link">Show credential <i class="fas fa-external-link-alt"></i></a>
+                        <a href="https://candidate.speedexam.net/certificate.aspx?SSTATE=am4131EniU8ntjp4bO5mXf6nUiWDMoMQTv6ogLUT7xnF/iFh2NaHmsVOTd12cxzQm7ZMXx8iEj+VYlah/tHhxq5ekBA92kZsD4etvEfuzIM=" target="_blank" class="cert-link">Show credential <i class="fas fa-external-link-alt"></i></a>
                     </div>
                 </div>
             </div>
