Remove expected graduation date from education section
Removed the expected graduation date from the education section.

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
             <div class="box-style">
                 <div class="timeline">
                     <div class="timeline-item">
-                        <span class="timeline-date">Expected 2027</span>
+                        <span class="timeline-date"></span>
                         <h4>Bachelor's in Cybersecurity</h4>
                         <p style="color: var(--text-muted); margin: 0;">Alexandria National University. Specialized focus on cryptography, ethical hacking, and advanced network security protocols.</p>
                     </div>
